--- a/config.toml.example
+++ b/config.toml.example
@@ -14,12 +14,18 @@ anisotropic_filtering = 16
 anti_aliasing = "msaa4"
 ssao_enabled = true
 clear_color = [0.0, 0.0, 0.0]
+wireframe_enabled = false
+wireframe_color = [1.0, 1.0, 1.0]
 
 [camera]
-movement_speed = 5.0
+movement_speed = 15.0
 sprint_multiplier = 2.0
-mouse_sensitivity = 0.002
-fov = 80.0
+mouse_sensitivity = 0.5
+zoom_speed = 50.0
+min_zoom = 5.0
+max_zoom = 50.0
+current_zoom = 20.0
+drag_sensitivity = 0.01
 
 [ui]
 show_fps = true
